--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/ac73b28558.js"></script>
     <title>Craig A Wendel</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -11,7 +12,7 @@
   </head>
   <body>
     <nav class="main-nav" id="main-nav">
-      <a id="logo" href="file:///Users/craigwendel/Desktop/craigwendel/personal-site/index.html"><h4 id="logo">CraigAWendel.com</h4></a>
+      <a id="logo" href="file:///Users/craigwendel/Desktop/craigwendel/personal-site/index.html"><h4 class="logo">CraigAWendel.com</h4></a>
     </nav>
   <header id="hero">
     <div class="main-heading">
@@ -42,7 +43,8 @@
           <div class="project-info">
             <h4>Mock Apple Website</h4>
             <p>This project was built with React JS and React Router.  It is a mock up of apple.com with products available to browse and add to a fictional cart.  The syling was done from scratch to mimic the look and feel of apple.com</p>
-            <button><a href="https://craigwendel.github.io/ecommerce-mock-site" target="_blank">Visit Website</a></button>
+            <button><a href="https://craigwendel.github.io/ecommerce-mock-site" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a></button>
+            <button><a href="https://github.com/craigwendel/ecommerce-mock-site" target="_blank"><i class="fa fa-code" aria-hidden="true"></i></a></button>
           </div>
         </div>
         <div class="project-flex" id="project-mid">
@@ -54,7 +56,8 @@
           <div class="project-info">
             <h4>Gabble!</h4>
             <p>This project was built with node.js and Express.  It allows users to sign up, create posts or "Gabs", and see what other people are posting.  It is hosted on heroku and ties into a SQL database using Postgres.</p>
-            <button><a href="http://stormy-sierra-79098.herokuapp.com/" target="_blank">Visit Website</a></button>
+            <button><a href="http://stormy-sierra-79098.herokuapp.com/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a></button>
+            <button><a href="https://github.com/craigwendel/gabble" target="_blank"><i class="fa fa-code" aria-hidden="true"></i></a></button>
           </div>
         </div>
         <div class="project-flex">
@@ -66,13 +69,14 @@
           <div class="project-info">
             <h4>SoundCloud</h4>
             <p>This project was built with vanilla JavaScript.  This application uses the API from Soundcloud to fetch artists/tracks and dynamically inject HTML results into the DOM.  This was our first major project using AJAX requests and I really enjoyed working on this one!</p>
-            <button><a href="https://craigwendel.github.io/soundcloud/" target="_blank">Visit Website</a></button>
+            <button><a href="https://craigwendel.github.io/soundcloud/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a></button>
+            <button><a href="https://github.com/craigwendel/soundcloud" target="_blank"><i class="fa fa-code" aria-hidden="true"></i></a></button>
           </div>
         </div>
       </div>
     </div>
     <div class="languages nav-colored" id="languages">
-      <h3>Languages I've coded in</h3>
+      <h3>Skills</h3>
       <div class="language-images">
         <div>
           <img src="./images/react.png" alt="react">
@@ -103,11 +107,10 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </section>
-  <section class="contact">
+  <section class="contact nav-colored">
     <div class="contact-links">
       <ul class="contact-ul">
-        <img src="./images/craigwendel.jpg" alt="self portrait of me">
-        <li><a href="tel: +19795417825">979.541.7825</a></li>
+        <h3>Contact Me:</h3>
         <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/craigwendel" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
         <li><a href="https://www.linkedin.com/in/craig-wendel-86719754/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -115,6 +118,22 @@
       </ul>
     </div>
   </section>
+  <div class="about-me nav-colored">
+    <div class="about-craig">
+      <h3>About</h3>
+      <img src="./images/craigwendel.jpg" alt="self portrait of me">
+      <p>
+        Hi! My name is Craig Wendel.  I moved from Austin Texas in May to attend the Iron Yard here in Houston, TX.  It's been a great past few months and I'm really loving every minute of class learning more about coding languages and frameworks.  I'm currently looking for opportunities to continue my coding career and continue to expand my knowledge in this ever evolving industry!
+      </p>
+    </div>
+  </div>
+  <div class="resume">
+    <div class="my-resume">
+      <a href="https://registry.jsonresume.org/craigwendel" target="_blank">
+      <h3>Resume</h3>
+      <i class="fa fa-file-text" aria-hidden="true"></i>
+      </a>
+    </div>
   <footer>
     <div class="footer-info">
       <h6>© Craig A Wendel | 2017</h6>
