Add media queries for tablet, desktop, and large monitors. Minor tweaks in HTML on Contact section.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h3>Projects</h3>
       <div class="main-projects">
         <div class="project-flex">
-          <a href="https://craigwendel.github.io/ecommerce-mock-site" target="_blank">
+          <a href="http://ecommerce-mock-site.surge.sh/" target="_blank">
           <div class="project-image">
             <img src="./images/apple-mock.png" alt="mock apple website" />
           </div>
@@ -41,7 +41,7 @@
           <div class="project-info">
             <h4>Mock Apple Website</h4>
             <p>This project was built with React JS and React Router.  It is a mock up of apple.com with products available to browse and add to a fictional cart.  The syling was done from scratch to mimic the look and feel of apple.com</p>
-            <a href="https://craigwendel.github.io/ecommerce-mock-site" target="_blank"><button><i class="fa fa-link" aria-hidden="true"></i></button></a>
+            <a href="http://ecommerce-mock-site.surge.sh/" target="_blank"><button><i class="fa fa-link" aria-hidden="true"></i></button></a>
             <a href="https://github.com/craigwendel/ecommerce-mock-site" target="_blank"><button><i class="fa fa-code" aria-hidden="true"></i></button></a>
           </div>
         </div>
@@ -107,8 +107,8 @@
   </section>
   <section class="contact nav-colored" id="contact">
     <div class="contact-links">
+      <h3>Contact Me:</h3>
       <ul class="contact-ul">
-        <h3>Contact Me:</h3>
         <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/craigwendel" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
         <li><a href="https://www.linkedin.com/in/craig-wendel-86719754/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
