Add CNAME file, adjust main logo hyperlink, add favicon.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/ac73b28558.js"></script>
     <title>Craig A Wendel</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico"
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <nav class="main-nav" id="main-nav"><a id="logo" class="logo" href="file:///Users/craigwendel/Desktop/craigwendel/personal-site/index.html">CraigAWendel.com</a><a class='contact-scroll' href="#contact">Contact</a>
+    <nav class="main-nav" id="main-nav"><a id="logo" class="logo" href="http://www.craigawendel.com/">CraigAWendel.com</a><a class='contact-scroll' href="#contact">Contact</a>
     </nav>
   <header id="hero">
     <div class="main-heading">
