Add git logo, adjusted media queries.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
           <img src="./images/css3.png" alt="css">
         </div>
         <div>
+          <img src="./images/git.svg" alt="git">
+        </div>
+        <div>
           <img src="./images/mongodb.png" alt="mongo db">
         </div>
         <div>
