Add updated .pdf resume to site.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h3>Resume</h3>
       <i class="fa fa-file-text" aria-hidden="true"></i>
       </a>
-      <a href="./craigwendelresume.pdf" target="_blank">(or PDF)</a>
+      <a href="./craigwendelresumenew.pdf" target="_blank">(or PDF)</a>
     </div>
   <a href="javascript:void(0);" id="scroll" title="Scroll to Top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
   <footer>
