Delete old .pdf file, edit verbage in HTML.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-heading">
       <h1>Hi! My name is Craig Wendel.</h1>
       <h4> I am looking for opportunities
-        <a href="" class="typewrite" data-period="2000" data-type='[ " in web development.", "using React JS.", "in UI/UX design.", "in software development." ]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ " in web development.", "using React.js", "in UI/UX design.", "in software development." ]'>
           <span class="wrap"></span>
         </a>
       </h4>
