Adjust HTML to comply with W3C standards, remove button tags and replace with a tags, style a tags and mobile media queries.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/ac73b28558.js"></script>
     <title>Craig A Wendel</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico"
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yellowtail" >
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -42,8 +42,8 @@
           <div class="project-info">
             <h4>Mock Apple Website</h4>
             <p>This project was built with React JS and React Router.  It is a mock up of apple.com with products available to browse and add to a fictional cart.  The syling was done from scratch to mimic the look and feel of apple.com</p>
-            <a href="http://ecommerce-mock-site.surge.sh/" target="_blank"><button><i class="fa fa-link" aria-hidden="true"></i></button></a>
-            <a href="https://github.com/craigwendel/ecommerce-mock-site" target="_blank"><button><i class="fa fa-code" aria-hidden="true"></i></button></a>
+            <a href="http://ecommerce-mock-site.surge.sh/" target="_blank" class="a-button"><i class="fa fa-link" aria-hidden="true"></i></a>
+            <a href="https://github.com/craigwendel/ecommerce-mock-site" target="_blank" class="a-button"><i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
         <div class="project-flex" id="project-mid">
@@ -55,8 +55,8 @@
           <div class="project-info">
             <h4>Gabble!</h4>
             <p>This project was built with node.js and Express.  It allows users to sign up, create posts or "Gabs", and see what other people are posting.  It is hosted on heroku and ties into a SQL database using Postgres.</p>
-            <a href="http://gabble-site.herokuapp.com/" target="_blank"><button><i class="fa fa-link" aria-hidden="true"></i></button></a>
-            <a href="https://github.com/craigwendel/gabble" target="_blank"><button><i class="fa fa-code" aria-hidden="true"></i></button></a>
+            <a href="http://gabble-site.herokuapp.com/" target="_blank" class="a-button"><i class="fa fa-link" aria-hidden="true"></i></a>
+            <a href="https://github.com/craigwendel/gabble" target="_blank" class="a-button"><i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
         <div class="project-flex">
@@ -68,8 +68,8 @@
           <div class="project-info">
             <h4>SoundCloud</h4>
             <p>This project was built with vanilla JavaScript.  This application uses the API from Soundcloud to fetch artists/tracks and dynamically inject HTML results into the DOM.  This was our first major project using AJAX requests and I really enjoyed working on this one!</p>
-            <a href="https://craigwendel.github.io/soundcloud/" target="_blank"><button><i class="fa fa-link" aria-hidden="true"></i></button></a>
-            <a href="https://github.com/craigwendel/soundcloud" target="_blank"><button><i class="fa fa-code" aria-hidden="true"></i></button></a>
+            <a href="https://craigwendel.github.io/soundcloud/" target="_blank" class="a-button"><i class="fa fa-link" aria-hidden="true"></i></a>
+            <a href="https://github.com/craigwendel/soundcloud" target="_blank" class="a-button"><i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
@@ -104,9 +104,9 @@
       </div>
     </div>
   </main>
-  <section>
+  <section class="google-map">
     <div class="google-map nav-colored">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" style="border:0" allowfullscreen></iframe>
     </div>
   </section>
   <section class="contact nav-colored" id="contact">
@@ -137,6 +137,7 @@
       </a>
       <a href="./craigwendelresumenew.pdf" target="_blank">(or PDF)</a>
     </div>
+  </div>
   <a href="javascript:void(0);" id="scroll" title="Scroll to Top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
   <footer>
     <div class="footer-info">
