--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
       <h3>Projects</h3>
       <div class="main-projects">
         <div class="project-flex">
+          <a href="http://whats-for-dinner.surge.sh/" target="_blank">
+          <div class="project-image">
+            <img src="./images/whats-for-dinner.png" alt="whats for dinner cooking website" />
+          </div>
+          </a>
+          <div class="project-info">
+            <h4>What's For Dinner?</h4>
+            <p>This is a full stack application built with React.js, React Router, and Node.js.  This app allows users to enter items they have at home and see recipes they can make with the ingredients they have.  It ties into the Food2Fork API as well as a custom built API on the backend allowing users to register and log in.</p>
+            <a href="http://whats-for-dinner.surge.sh/" target="_blank" class="a-button"><i class="fa fa-link" aria-hidden="true"></i></a>
+            <a href="https://github.com/craigwendel/whats-for-dinner" target="_blank" class="a-button"><i class="fa fa-code" aria-hidden="true"></i></a>
+          </div>
+        </div>
+        <div class="project-flex" id="project-first">
           <a href="http://ecommerce-mock-site.surge.sh/" target="_blank">
           <div class="project-image">
             <img src="./images/apple-mock.png" alt="mock apple website" />
@@ -108,9 +121,8 @@
     <div class="google-map nav-colored">
       <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" style="border:0" allowfullscreen></iframe>
     </div>
-  </section>
-  <section class="contact nav-colored" id="contact">
-    <div class="contact-links">
+  </section class="contact nav-colored">
+    <div class="contact-links" id="contact">
       <h3>Contact Me:</h3>
       <ul class="contact-ul">
         <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
