Modify HTML tags, declare language of document.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -121,8 +121,8 @@
     <div class="google-map nav-colored">
       <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" style="border:0" allowfullscreen></iframe>
     </div>
-  </section class="contact nav-colored">
-    <div class="contact-links" id="contact">
+  </section>
+    <div class="contact-links contact nav-colored" id="contact">
       <h3>Contact Me:</h3>
       <ul class="contact-ul">
         <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -131,7 +131,6 @@
         <li><a href="https://medium.com/@wendelcraig"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
       </ul>
     </div>
-  </section>
   <div class="about-me nav-colored">
     <div class="about-craig">
       <h3>About</h3>
