Add parallax scroll for contact section. Edit queries for responsive layout, disable parallax scroll on mobile devices.

--- a/index.html
+++ b/index.html
@@ -117,20 +117,17 @@
       </div>
     </div>
   </main>
-  <section class="google-map">
-    <div class="google-map nav-colored">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45321.14877015138!2d-95.37653383939596!3d29.771382978805324!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1502821522053" width="1500" height="450" style="border:0" allowfullscreen></iframe>
-    </div>
-  </section>
-    <div class="contact-links contact nav-colored" id="contact">
-      <h3>Contact Me:</h3>
-      <ul class="contact-ul">
-        <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-        <li><a href="https://github.com/craigwendel" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/craig-wendel-86719754/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        <li><a href="https://medium.com/@wendelcraig"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
+  <div class="contact-links contact nav-colored" id="contact">
+    <h3>Contact Me:</h3>
+    <ul class="contact-ul">
+      <li><a href="mailto:wendelcraig@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+      <li><a href="https://github.com/craigwendel" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/craig-wendel-86719754/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+      <li><a href="https://medium.com/@wendelcraig"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+    </ul>
+  </div>
+  <div class="google-map-image">
+  </div>
   <div class="about-me nav-colored">
     <div class="about-craig">
       <h3>About</h3>
