Add .scss file. Optimize images for faster performance. Add .gitignore for scss mapping. Edit Readme.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yellowtail" >
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <nav class="main-nav" id="main-nav"><a id="logo" class="logo" href="http://www.craigawendel.com/">CraigAWendel.com</a><a class='contact-scroll' href="#contact">Contact</a>
@@ -45,7 +45,7 @@
         <div class="project-flex">
           <a href="http://whats-for-dinner.surge.sh/" target="_blank">
           <div class="project-image">
-            <img src="./images/whats-for-dinner.png" alt="whats for dinner cooking website" />
+            <img src="./images/whats-for-dinner-converted.png" alt="whats for dinner cooking website" />
           </div>
           </a>
           <div class="project-info">
@@ -58,7 +58,7 @@
         <div class="project-flex" id="project-first">
           <a href="http://ecommerce-mock-site.surge.sh/" target="_blank">
           <div class="project-image">
-            <img src="./images/apple-mock.png" alt="mock apple website" />
+            <img src="./images/apple-mock-converted.png" alt="mock apple website" />
           </div>
           </a>
           <div class="project-info">
@@ -71,7 +71,7 @@
         <div class="project-flex" id="project-mid">
           <a href="http://gabble-site.herokuapp.com/" target="_blank">
           <div class="project-image">
-            <img src="./images/gabble.png" alt="gabble website" />
+            <img src="./images/gabble-converted.png" alt="gabble website" />
           </div>
           </a>
           <div class="project-info">
@@ -84,7 +84,7 @@
         <div class="project-flex">
           <a href="https://craigwendel.github.io/soundcloud/" target="_blank">
           <div class="project-image">
-            <img src="./images/soundcloud.png" alt="soundcloud website" />
+            <img src="./images/soundcloud-converted.png" alt="soundcloud website" />
           </div>
           </a>
           <div class="project-info">
@@ -99,30 +99,14 @@
     <div class="languages nav-colored" id="languages">
       <h3>Skills</h3>
       <div class="language-images">
-        <div>
-          <img src="./images/react.png" alt="react">
-        </div>
-        <div>
-          <img src="./images/javascript.png" alt="javascript">
-        </div>
-        <div>
-          <img src="./images/nodejs.png" alt="nodejs">
-        </div>
-        <div>
-          <img src="./images/html.png" alt="html">
-        </div>
-        <div>
-          <img src="./images/css3.png" alt="css">
-        </div>
-        <div>
-          <img src="./images/git.svg" alt="git">
-        </div>
-        <div>
-          <img src="./images/mongodb.png" alt="mongo db">
-        </div>
-        <div>
-          <img src="./images/postgresql.png" alt="postgresql">
-        </div>
+        <img src="./images/react-converted.png" alt="react">
+        <img src="./images/javascript-converted.png" alt="javascript">
+        <img src="./images/nodejs-converted.png" alt="nodejs">
+        <img src="./images/html-converted.png" alt="html">
+        <img src="./images/css3-converted.png" alt="css">
+        <img src="./images/git.svg" alt="git">
+        <img src="./images/mongodb-converted.png" alt="mongo db">
+        <img src="./images/postgressql-converted.png" alt="postgresql">
       </div>
     </div>
   </main>
@@ -140,7 +124,7 @@
   <div class="about-me nav-colored">
     <div class="about-craig">
       <h3>About</h3>
-      <img src="./images/craigwendel.jpg" alt="self portrait of me">
+      <img src="./images/craigwendel-converted.jpg" alt="self portrait of me">
       <p>
         Hi! My name is Craig Wendel.  I moved from Austin Texas in May to attend the Iron Yard in Houston, TX.  It's been a great past few months and I'm really loving every minute of class learning more about coding languages and frameworks.  I'm currently looking for opportunities to continue my coding career and continue to expand my knowledge in this ever evolving industry!
       </p>
